# SeioEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
include/glad/: glad.c  glad.h
resources/shaders/: sprite-default.frag  sprite-default.vert
src/: main.cpp  shader.h
src/GL/: Camera2D.cpp  Camera2D.h  IndexBufferObject.cpp  IndexBufferObject.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  Texture2D.cpp  Texture2D.h  VertexArrayObject.cpp  VertexArrayObject.h  VertexBufferObject.cpp  VertexBufferObject.h
src/Seio/: Batch.cpp  Batch.h  Component.h  GameObject.cpp  GameObject.h  GameObjectManager.h  Global.cpp  Global.h  IO.cpp  IO.h  ImGuiDrawUtils.h  LuaComponent.h  Material.h  RenderSystem.cpp  RenderSystem.h  Renderer.h  ShaderManager.cpp  ShaderManager.h  Singleton.h  Sprite.cpp  Sprite.h  SpriteRenderer.cpp  SpriteRenderer.h  Transform.cpp  Transform.h  Vertex.h
src/seio/: filesystem.h  main.cpp  shader.cpp
src/shaders/: frag.fs  vert.vs
